@@ -39,6 +39,7 @@ Version 1.5.7+svn:
     * Added an option to save the password to the preferences
 
   * Language and translations
+    * Translations of user-made content work again when available.
     * updated translations: Chinese (Simplified), Czech, Danish, German,
       Hungarian, Italian, Japanese, Lithuanian, Russian, Slovak, Spanish.
 
